--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "sortarad/quick-brown-fox",
     "description": "Fonts are fun, let's make them easier to showcase.",
     "keywords": ["statamic"],
-    "homepage": "https://github.com/sortarad/quickbrownfox.git",
+    "homepage": "https://github.com/sortarad/quickbrownfox",
     "license": "MIT",
     "autoload": {
         "psr-4": {
